tweaked simulation parameters to make it behave correctly, switched back to brute force broad phase for timebeing because BVHNode is slightly buggy

--- a/.gitignore
+++ b/.gitignore
@@ -125,3 +125,58 @@ Resources/box.dae
 Resources/black.dds
 Release/assimp-vc142-mt.dll
 Debug/assimp-vc142-mtd.dll
+x64/Release/BroadCollide.nativecodeanalysis.sarif
+x64/Release/BroadCollide.nativecodeanalysis.xml
+x64/Release/Camera.nativecodeanalysis.sarif
+x64/Release/Camera.nativecodeanalysis.xml
+x64/Release/CollisionEngine.nativecodeanalysis.sarif
+x64/Release/CollisionEngine.nativecodeanalysis.xml
+x64/Release/CollisionObject.nativecodeanalysis.sarif
+x64/Release/CollisionObject.nativecodeanalysis.xml
+x64/Release/Contact.nativecodeanalysis.sarif
+x64/Release/Contact.nativecodeanalysis.xml
+x64/Release/d3dUtil.nativecodeanalysis.sarif
+x64/Release/d3dUtil.nativecodeanalysis.xml
+x64/Release/DDSTextureLoader12.nativecodeanalysis.sarif
+x64/Release/DDSTextureLoader12.nativecodeanalysis.xml
+x64/Release/Engine.nativecodeanalysis.sarif
+x64/Release/Engine.nativecodeanalysis.xml
+x64/Release/FrameResources.nativecodeanalysis.sarif
+x64/Release/FrameResources.nativecodeanalysis.xml
+x64/Release/GameObject.nativecodeanalysis.sarif
+x64/Release/GameObject.nativecodeanalysis.xml
+x64/Release/InputManager.nativecodeanalysis.sarif
+x64/Release/InputManager.nativecodeanalysis.xml
+x64/Release/JobSystem.nativecodeanalysis.sarif
+x64/Release/JobSystem.nativecodeanalysis.xml
+x64/Release/main.nativecodeanalysis.sarif
+x64/Release/main.nativecodeanalysis.xml
+x64/Release/MathHelper.nativecodeanalysis.sarif
+x64/Release/MathHelper.nativecodeanalysis.xml
+x64/Release/Matrix.nativecodeanalysis.sarif
+x64/Release/Matrix.nativecodeanalysis.xml
+x64/Release/MemoryManager.nativecodeanalysis.sarif
+x64/Release/MemoryManager.nativecodeanalysis.xml
+x64/Release/NarrowCollide.nativecodeanalysis.sarif
+x64/Release/NarrowCollide.nativecodeanalysis.xml
+x64/Release/Object.nativecodeanalysis.sarif
+x64/Release/Object.nativecodeanalysis.xml
+x64/Release/Quaternion.nativecodeanalysis.sarif
+x64/Release/Quaternion.nativecodeanalysis.xml
+x64/Release/Renderer.nativecodeanalysis.sarif
+x64/Release/Renderer.nativecodeanalysis.xml
+x64/Release/ResourceManager.nativecodeanalysis.sarif
+x64/Release/ResourceManager.nativecodeanalysis.xml
+x64/Release/RigidBody.nativecodeanalysis.sarif
+x64/Release/RigidBody.nativecodeanalysis.xml
+x64/Release/Scene.nativecodeanalysis.sarif
+x64/Release/Scene.nativecodeanalysis.xml
+x64/Release/Timer.nativecodeanalysis.sarif
+x64/Release/Timer.nativecodeanalysis.xml
+x64/Release/Utilities.nativecodeanalysis.sarif
+x64/Release/Utilities.nativecodeanalysis.xml
+x64/Release/vc.nativecodeanalysis.all.xml
+x64/Release/Vector.nativecodeanalysis.sarif
+x64/Release/Vector.nativecodeanalysis.xml
+x64/Release/Window.nativecodeanalysis.sarif
+x64/Release/Window.nativecodeanalysis.xml
