--- a/.gitignore
+++ b/.gitignore
@@ -12,171 +12,12 @@
 *.idb
 *.ilk
 *.log
-x64/Debug/Engine.vcxproj.FileListAbsolute.txt
 *.enc
 *.iobj
 *.ipdb
 *.opendb
-Resources/CyberCity3D_Sample_OBJ.zip
 *.p7s
-packages/zlib-vc140-static-64.1.2.11/build/native/zlib-vc140-static-64.targets
-packages/zlib-vc140-static-64.1.2.11/lib/native/include/crc32.h
-packages/zlib-vc140-static-64.1.2.11/lib/native/include/deflate.h
-packages/zlib-vc140-static-64.1.2.11/lib/native/include/gzguts.h
-packages/zlib-vc140-static-64.1.2.11/lib/native/include/inffast.h
-packages/zlib-vc140-static-64.1.2.11/lib/native/include/inffixed.h
-packages/zlib-vc140-static-64.1.2.11/lib/native/include/inflate.h
-packages/zlib-vc140-static-64.1.2.11/lib/native/include/inftrees.h
-packages/zlib-vc140-static-64.1.2.11/lib/native/include/trees.h
-packages/zlib-vc140-static-64.1.2.11/lib/native/include/zconf.h
-packages/zlib-vc140-static-64.1.2.11/lib/native/include/zlib.h
-packages/zlib-vc140-static-64.1.2.11/lib/native/include/zutil.h
-packages/zlib-vc140-static-64.1.2.11/lib/native/libs/x64/static/Debug/zlibstatic.lib
-packages/zlib-vc140-static-64.1.2.11/lib/native/libs/x64/static/Release/zlibstatic.lib
-packages/zlib-vc140-static-64.1.2.11/zlib-vc140-static-64.1.2.11.nupkg
-Resources/CyberCity3D_Sample_OBJ/CyberCity3D_Sample_OBJ.zip
-Resources/CyberCity3D_Sample_OBJ/OBJ/Miami_Sample.mtl
-Resources/CyberCity3D_Sample_OBJ_original.zip
-Resources/Miami_Sample.mtl
-Resources/Miami_Sample.zip
-Resources/OBJ.zip
-Resources/text.txt.zip
-Resources/text.txt/text.txt
-test.zip
+packages/
+Resources/
+x64/
 *.zip
-x64/Release/Engine.vcxproj.FileListAbsolute.txt
-packages/directxtk12_desktop_2015.2019.12.17.1/build/native/directxtk12_desktop_2015.targets
-packages/directxtk12_desktop_2015.2019.12.17.1/directxtk12_desktop_2015.2019.12.17.1.nupkg
-packages/directxtk12_desktop_2015.2019.12.17.1/docs/Readme.txt
-packages/directxtk12_desktop_2015.2019.12.17.1/images/icon.jpg
-packages/directxtk12_desktop_2015.2019.12.17.1/include/Audio.h
-packages/directxtk12_desktop_2015.2019.12.17.1/include/CommonStates.h
-packages/directxtk12_desktop_2015.2019.12.17.1/include/DDSTextureLoader.h
-packages/directxtk12_desktop_2015.2019.12.17.1/include/DescriptorHeap.h
-packages/directxtk12_desktop_2015.2019.12.17.1/include/DirectXHelpers.h
-packages/directxtk12_desktop_2015.2019.12.17.1/include/EffectPipelineStateDescription.h
-packages/directxtk12_desktop_2015.2019.12.17.1/include/Effects.h
-packages/directxtk12_desktop_2015.2019.12.17.1/include/GamePad.h
-packages/directxtk12_desktop_2015.2019.12.17.1/include/GeometricPrimitive.h
-packages/directxtk12_desktop_2015.2019.12.17.1/include/GraphicsMemory.h
-packages/directxtk12_desktop_2015.2019.12.17.1/include/Keyboard.h
-packages/directxtk12_desktop_2015.2019.12.17.1/include/Model.h
-packages/directxtk12_desktop_2015.2019.12.17.1/include/Mouse.h
-packages/directxtk12_desktop_2015.2019.12.17.1/include/PostProcess.h
-packages/directxtk12_desktop_2015.2019.12.17.1/include/PrimitiveBatch.h
-packages/directxtk12_desktop_2015.2019.12.17.1/include/RenderTargetState.h
-packages/directxtk12_desktop_2015.2019.12.17.1/include/ResourceUploadBatch.h
-packages/directxtk12_desktop_2015.2019.12.17.1/include/ScreenGrab.h
-packages/directxtk12_desktop_2015.2019.12.17.1/include/SimpleMath.h
-packages/directxtk12_desktop_2015.2019.12.17.1/include/SimpleMath.inl
-packages/directxtk12_desktop_2015.2019.12.17.1/include/SpriteBatch.h
-packages/directxtk12_desktop_2015.2019.12.17.1/include/SpriteFont.h
-packages/directxtk12_desktop_2015.2019.12.17.1/include/VertexTypes.h
-packages/directxtk12_desktop_2015.2019.12.17.1/include/WICTextureLoader.h
-packages/directxtk12_desktop_2015.2019.12.17.1/lib/Win32/Debug/DirectXTK12.lib
-packages/directxtk12_desktop_2015.2019.12.17.1/lib/Win32/Release/DirectXTK12.lib
-packages/directxtk12_desktop_2015.2019.12.17.1/lib/x64/Debug/DirectXTK12.lib
-packages/directxtk12_desktop_2015.2019.12.17.1/lib/x64/Release/DirectXTK12.lib
-packages/rapidxml.1.13/build/configurations.autopkg
-packages/rapidxml.1.13/build/native/default-propertiesui.xml
-packages/rapidxml.1.13/build/native/include/rapidxml/rapidxml.hpp
-packages/rapidxml.1.13/build/native/include/rapidxml/rapidxml_iterators.hpp
-packages/rapidxml.1.13/build/native/include/rapidxml/rapidxml_print.hpp
-packages/rapidxml.1.13/build/native/include/rapidxml/rapidxml_utils.hpp
-packages/rapidxml.1.13/build/native/rapidxml.targets
-packages/rapidxml.1.13/build/publisher-info.txt
-packages/rapidxml.1.13/rapidxml.1.13.nupkg
-x64/Release/assimp-vc142-mtd.dll
-x64/Release/assimp-vc142-mt.dll
-x64/Debug/Window.nativecodeanalysis.sarif
-x64/Debug/Vector.nativecodeanalysis.sarif
-x64/Debug/Utilities.nativecodeanalysis.sarif
-x64/Debug/Timer.nativecodeanalysis.sarif
-x64/Debug/Scene.nativecodeanalysis.sarif
-x64/Debug/ResourceManager.nativecodeanalysis.sarif
-x64/Debug/Renderer.nativecodeanalysis.sarif
-x64/Debug/Quaternion.nativecodeanalysis.sarif
-x64/Debug/Object.nativecodeanalysis.sarif
-x64/Debug/MemoryManager.nativecodeanalysis.sarif
-x64/Debug/Matrix.nativecodeanalysis.sarif
-x64/Debug/MathHelper.nativecodeanalysis.sarif
-x64/Debug/main.nativecodeanalysis.sarif
-x64/Debug/JobSystem.nativecodeanalysis.sarif
-x64/Debug/InputManager.nativecodeanalysis.sarif
-x64/Debug/FrameResources.nativecodeanalysis.sarif
-x64/Debug/Engine.nativecodeanalysis.sarif
-x64/Debug/DDSTextureLoader12.nativecodeanalysis.sarif
-x64/Debug/d3dUtil.nativecodeanalysis.sarif
-x64/Debug/Camera.nativecodeanalysis.sarif
-x64/Debug/assimp-vc142-mtd.dll
-x64/Debug/assimp-vc142-mt.dll
-Resources/Sword/Sword.dae
-Resources/Sword/Sting_Roughness.dds
-Resources/Sword/Sting_Normal.dds
-Resources/Sword/Sting_Metallic.dds
-Resources/Sword/Sting_Height.dds
-Resources/Sword.dae
-Resources/Handgun_dae.dae
-Resources/Handgun_binary.fbx
-Resources/CrateModel.fbx
-Resources/CrateModel.dae
-Resources/cat.dae
-Resources/box.dae
-Resources/black.dds
-Release/assimp-vc142-mt.dll
-Debug/assimp-vc142-mtd.dll
-x64/Release/BroadCollide.nativecodeanalysis.sarif
-x64/Release/BroadCollide.nativecodeanalysis.xml
-x64/Release/Camera.nativecodeanalysis.sarif
-x64/Release/Camera.nativecodeanalysis.xml
-x64/Release/CollisionEngine.nativecodeanalysis.sarif
-x64/Release/CollisionEngine.nativecodeanalysis.xml
-x64/Release/CollisionObject.nativecodeanalysis.sarif
-x64/Release/CollisionObject.nativecodeanalysis.xml
-x64/Release/Contact.nativecodeanalysis.sarif
-x64/Release/Contact.nativecodeanalysis.xml
-x64/Release/d3dUtil.nativecodeanalysis.sarif
-x64/Release/d3dUtil.nativecodeanalysis.xml
-x64/Release/DDSTextureLoader12.nativecodeanalysis.sarif
-x64/Release/DDSTextureLoader12.nativecodeanalysis.xml
-x64/Release/Engine.nativecodeanalysis.sarif
-x64/Release/Engine.nativecodeanalysis.xml
-x64/Release/FrameResources.nativecodeanalysis.sarif
-x64/Release/FrameResources.nativecodeanalysis.xml
-x64/Release/GameObject.nativecodeanalysis.sarif
-x64/Release/GameObject.nativecodeanalysis.xml
-x64/Release/InputManager.nativecodeanalysis.sarif
-x64/Release/InputManager.nativecodeanalysis.xml
-x64/Release/JobSystem.nativecodeanalysis.sarif
-x64/Release/JobSystem.nativecodeanalysis.xml
-x64/Release/main.nativecodeanalysis.sarif
-x64/Release/main.nativecodeanalysis.xml
-x64/Release/MathHelper.nativecodeanalysis.sarif
-x64/Release/MathHelper.nativecodeanalysis.xml
-x64/Release/Matrix.nativecodeanalysis.sarif
-x64/Release/Matrix.nativecodeanalysis.xml
-x64/Release/MemoryManager.nativecodeanalysis.sarif
-x64/Release/MemoryManager.nativecodeanalysis.xml
-x64/Release/NarrowCollide.nativecodeanalysis.sarif
-x64/Release/NarrowCollide.nativecodeanalysis.xml
-x64/Release/Object.nativecodeanalysis.sarif
-x64/Release/Object.nativecodeanalysis.xml
-x64/Release/Quaternion.nativecodeanalysis.sarif
-x64/Release/Quaternion.nativecodeanalysis.xml
-x64/Release/Renderer.nativecodeanalysis.sarif
-x64/Release/Renderer.nativecodeanalysis.xml
-x64/Release/ResourceManager.nativecodeanalysis.sarif
-x64/Release/ResourceManager.nativecodeanalysis.xml
-x64/Release/RigidBody.nativecodeanalysis.sarif
-x64/Release/RigidBody.nativecodeanalysis.xml
-x64/Release/Scene.nativecodeanalysis.sarif
-x64/Release/Scene.nativecodeanalysis.xml
-x64/Release/Timer.nativecodeanalysis.sarif
-x64/Release/Timer.nativecodeanalysis.xml
-x64/Release/Utilities.nativecodeanalysis.sarif
-x64/Release/Utilities.nativecodeanalysis.xml
-x64/Release/vc.nativecodeanalysis.all.xml
-x64/Release/Vector.nativecodeanalysis.sarif
-x64/Release/Vector.nativecodeanalysis.xml
-x64/Release/Window.nativecodeanalysis.sarif
-x64/Release/Window.nativecodeanalysis.xml
