--- a/Engine.vcxproj
+++ b/Engine.vcxproj
@@ -146,16 +146,16 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>C:\Program Files\Autodesk\FBX\FBX SDK\2020.0.1\include;C:\Users\Seth Eisner\Downloads\assimp-5.0.0\assimp-5.0.0\include;C:\Users\Seth Eisner\source\repos\Engine\packages\zlib-vc140-static-64.1.2.11\lib\native\include;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\Users\Seth Eisner\Downloads\assimp-5.0.0\assimp-5.0.0\lib\Release;C:\Program Files\Autodesk\FBX\FBX SDK\2020.0.1\lib\vs2017\x64\$(Configuration);C:\Users\Seth Eisner\source\repos\Engine\packages\zlib-vc140-static-64.1.2.11\lib\native\libs\x64\static\$(Configuration);$(LibraryPath)</LibraryPath>
+    <IncludePath>C:\Users\Seth Eisner\source\repos\Engine\packages\assimp-5.0.0\assimp-5.0.0\include;C:\Users\Seth Eisner\source\repos\Engine\packages\zlib-vc140-static-64.1.2.11\lib\native\include;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\Users\Seth Eisner\source\repos\Engine\packages\assimp-5.0.0\assimp-5.0.0\lib\Release;C:\Users\Seth Eisner\source\repos\Engine\packages\zlib-vc140-static-64.1.2.11\lib\native\libs\x64\static\$(Configuration);$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>C:\Program Files\Autodesk\FBX\FBX SDK\2020.0.1\include;C:\Users\Seth Eisner\Downloads\assimp-5.0.0\assimp-5.0.0\include;C:\Users\Seth Eisner\source\repos\Engine\packages\zlib-vc140-static-64.1.2.11\lib\native\include;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\Users\Seth Eisner\Downloads\assimp-5.0.0\assimp-5.0.0\lib\$(Configuration);C:\Program Files\Autodesk\FBX\FBX SDK\2020.0.1\lib\vs2017\x64\$(Configuration);C:\Users\Seth Eisner\source\repos\Engine\packages\zlib-vc140-static-64.1.2.11\lib\native\libs\x64\static\$(Configuration);$(LibraryPath)</LibraryPath>
+    <IncludePath>C:\Users\Seth Eisner\source\repos\Engine\packages\assimp-5.0.0\assimp-5.0.0\include;C:\Users\Seth Eisner\source\repos\Engine\packages\zlib-vc140-static-64.1.2.11\lib\native\include;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\Users\Seth Eisner\source\repos\Engine\packages\assimp-5.0.0\assimp-5.0.0\lib\$(Configuration);C:\Users\Seth Eisner\source\repos\Engine\packages\zlib-vc140-static-64.1.2.11\lib\native\libs\x64\static\$(Configuration);$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -182,7 +182,7 @@
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>assimp-vc142-mt.lib;IrrXML.lib;zlibstatic.lib;libfbxsdk.lib;d3dcompiler.lib;d3d12.lib;dxgi.lib;dxguid.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>assimp-vc142-mt.lib;IrrXML.lib;zlibstatic.lib;d3dcompiler.lib;d3d12.lib;dxgi.lib;dxguid.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>C:\Users\Seth Eisner\Documents\vcpkg\installed\x86-windows\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
@@ -221,7 +221,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>assimp-vc142-mt.lib;IrrXML.lib;zlibstatic.lib;libfbxsdk.lib;d3dcompiler.lib;d3d12.lib;dxgi.lib;dxguid.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>assimp-vc142-mt.lib;IrrXML.lib;zlibstatic.lib;d3dcompiler.lib;d3d12.lib;dxgi.lib;dxguid.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>C:\Users\Seth Eisner\Documents\vcpkg\installed\x86-windows\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <Profile>true</Profile>
     </Link>
